# athena-warehouse

./: .dockerignore  .gitignore  Dockerfile  README.md  cdk.json  cdk.py  pyproject.toml
src/economic_data/: athena.py  catalog.toml  cli.py  config.py  fred.py  lambda_handlers.py  metadata.py
tests/: __init__.py  test_athena.py  test_fred.py  test_lambda_handlers.py
