[project]
name = "economic-data"
version = "0.1.0"
description = "Ingest economic data from FRED."
authors = [
    {name = "Grayden Shand", email = "graydenshand@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.4.2",
    "boto3>=1.28.84",
    "pyathena>=3.0.10",
    "click>=8.1.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
economic-data = "economic_data.cli:cli"

[project.optional-dependencies]
lambda = [
    "awslambdaric>=2.0.8",
]
[tool.pdm.dev-dependencies]
dev = [
    "aws-cdk-lib>=2.106.1",
    "pytest>=7.4.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths=["tests"]